# LabSOPGuard_VLA

./: .env.example  .gitattributes  .gitignore  00_setup_environment.py  14_check_environment.py  AGENTS.md  CLAUDE.md  CODEX_HANDOFF.md  CONTRIBUTING.md  Dockerfile  LabSOPGuard.md  README.md  RUN_REPAIR_NOW.cmd  SECURITY.md  adaptive_monitor_integration.py  audit_report.md  demo_experiment.py  docker-compose.runtime.yml  docker-compose.yml  environment.runtime.yml  environment.yml  extract_sample_frames.py  frontend_backend_field_gap_report.json  frontend_experiment_page_cleanup_report.json  frontend_segment_dualview_cleanup_report.json  integration_report.md  key_material_page_review_package.md  openai_wrapper.py  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.gpu-cu124.txt  requirements.local-e2e.txt  requirements.txt  video_analysis_pipeline.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.md
Ultralytics/: persistent_cache.json
backend/: auth_discovery_cache.py  callback_security.py  camera_proxy.py  camera_service.py  camera_streaming.py  camera_streaming_degraded.py  diagnostics_router.py  feishu_event_handler.py  feishu_notifier.py  feishu_step_material_bot.py  main.py  ops_router.py  ptz_proxy.py  ptz_service.py  ptz_tracker_streaming.py  service_proxy.py  usb_camera_worker.py  video_analysis_router.py  video_store_fast_register.py
configs/: base.yaml  material_scoring.yaml  vision_pose.yaml
demo/: vlm_weighing_demo.py  weighing_sop_demo.py
docs/: acceptance_5.8_material_library.md  acceptance_pipeline.md  advanced_evidence_input_protocol.md  advanced_landing_capability_tasks.md  annotation_guidelines.md  api.md  architecture.md  artifact_schema_export_tasks.md  autodl_quickstart.md  codex_handoff_2026-05-07_vlm_material_pdf_pipeline.md  configuration.md  confirmation_audit_backend.md  data_contracts.md  data_model.md  dataset_format.md  dataset_spec.md  deployment.md  developer_0to1_playbook.md  developer_guide.md  development.md  dual_pc_sync.md  env_management.md  environment_guide.md  event_material_anchor_tasks.md  experiment_log.md  experiment_process_understanding_0_to_1_taskbook.md  experiment_understanding_completion_status_taskbook.md  experiment_understanding_reasoning_tasks.md  github_maintenance.md  handoff.md  handoff_freeze_2026-05-08.md  integrated_system.md  integrated_system_demo_delivery_2026-03-30.md  key_action_indexer_reasoning_updates.md  lab_titration_vla_migration.md  material_asset_library_tasks.md  material_candidate_review_routing_taskbook.md  model_card.md  (+27 more)
web/: index.html  (+2 more)
(+1534 files in other folders)
