[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "key-action-indexer"
version = "0.1.0"
description = "MVP pipeline for key action clip extraction, multimodal time alignment, text descriptions, and vector indexing."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
